# agent-army

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run.sh
docs/: ARCHITECTURE.md  BACKLOG.md  COMMANDS.md  INDEX.md
src/agent_army/: checkpointer.py  cli.py  config.py  knowledge_store.py  logging_config.py  orchestrator.py  registry.py  telegram_gateway.py
tests/: conftest.py  test_knowledge_store.py  test_registry.py
