[project]
name = "agent-army"
version = "0.1.0"
description = "Runtime orchestrator for the Agent Army — routes tasks to specialized agents"
requires-python = ">=3.13,<3.14"

dependencies = [
  "langgraph>=0.4",
  "langchain-core>=0.3",
  "langchain-openai>=0.3",
  "langmem>=0.0.30",
  "langgraph-checkpoint-sqlite>=3.0",
  "python-dotenv>=1.0",
]

[project.scripts]
agent-army = "agent_army.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.9.0,<1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
